Dragging on mobile fixed

--- a/app/components/TennisCourt.module.scss
+++ b/app/components/TennisCourt.module.scss
@@ -274,6 +274,11 @@
   height: auto;
   display: block;
   object-fit: contain;
+  touch-action: none; /* Prevent default touch behaviors like scrolling */
+  user-select: none; /* Prevent text selection */
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 .courtCanvasLandscape {
